pkg/check/testdata/ub/types/invalid/missing-reference-scalar.ub
resources: {
  bucket: ext.bucket {
    tags: {}
    items: []
  }
}
